--- a/backoffice-api/package.json
+++ b/backoffice-api/package.json
@@ -15,6 +15,7 @@
     "azure-sb": "^0.11.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mssql": "^10.0.1",
     "swagger-jsdoc": "^6.2.8",
